--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <onos.version>2.0.0</onos.version>
-        <onos.app.name>org.cdcju.app</onos.app.name>
+        <onos.app.name>org.cdcju.ddos-app</onos.app.name>
         <onos.app.title>DDoS App</onos.app.title>
         <onos.app.origin>CDCJU</onos.app.origin>
         <onos.app.category>default</onos.app.category>
